@@ -1,3 +1,9 @@
+Wed Feb 24 00:40:58 2010  Akinori MUSHA  <knu@iDaemons.org>
+
+	* parse.y: Revert r26609, r26160, r25658 and r24695.  The loose
+	  args patch caused a lot of problem and we just could not fix
+	  them all in a timely manner.
+
 Fri Feb 19 12:15:21 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* ext/readline/readline.c (Init_readline): initialize
